project-assessment-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web-service
  ports:
    - port: 80
      targetPort: 80
